--- a/phase1/db/cpu_phase1.lpc.html
+++ b/phase1/db/cpu_phase1.lpc.html
@@ -416,6 +416,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >ALU|div_unit</TD>
+<TD >64</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >64</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >ALU|mul_unit|negate_ra|add_op|CLA_upper|CLA_upper</TD>
 <TD >9</TD>
 <TD >0</TD>
