--- a/phase2/db/cpu_phase2.lpc.html
+++ b/phase2/db/cpu_phase2.lpc.html
@@ -16,6 +16,54 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >S_and_E|decoder</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >S_and_E</TD>
+<TD >38</TD>
+<TD >0</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >64</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >RAM</TD>
+<TD >42</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >ALU|rol</TD>
 <TD >64</TD>
 <TD >0</TD>
@@ -1218,13 +1266,13 @@
 <TR >
 <TD >BusEncoder</TD>
 <TD >32</TD>
-<TD >22</TD>
+<TD >11</TD>
 <TD >0</TD>
-<TD >22</TD>
+<TD >11</TD>
 <TD >5</TD>
-<TD >22</TD>
-<TD >22</TD>
-<TD >22</TD>
+<TD >11</TD>
+<TD >11</TD>
+<TD >11</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1266,13 +1314,13 @@
 <TR >
 <TD >R15</TD>
 <TD >35</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1282,13 +1330,13 @@
 <TR >
 <TD >R14</TD>
 <TD >35</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1298,13 +1346,13 @@
 <TR >
 <TD >R13</TD>
 <TD >35</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1314,13 +1362,13 @@
 <TR >
 <TD >R12</TD>
 <TD >35</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1330,13 +1378,13 @@
 <TR >
 <TD >R11</TD>
 <TD >35</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1346,13 +1394,13 @@
 <TR >
 <TD >R10</TD>
 <TD >35</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1362,13 +1410,13 @@
 <TR >
 <TD >R9</TD>
 <TD >35</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1378,13 +1426,13 @@
 <TR >
 <TD >R8</TD>
 <TD >35</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1474,13 +1522,13 @@
 <TR >
 <TD >R2</TD>
 <TD >35</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
 <TD >32</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1490,13 +1538,13 @@
 <TR >
 <TD >R1</TD>
 <TD >35</TD>
-<TD >1</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1506,13 +1554,29 @@
 <TR >
 <TD >R0</TD>
 <TD >35</TD>
-<TD >1</TD>
-<TD >0</TD>
-<TD >1</TD>
 <TD >32</TD>
-<TD >1</TD>
-<TD >1</TD>
-<TD >1</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >MAR</TD>
+<TD >35</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1538,13 +1602,13 @@
 <TR >
 <TD >PC</TD>
 <TD >35</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
 <TD >32</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
