con ff logic for branches

--- a/phase2/db/cpu_phase2.lpc.html
+++ b/phase2/db/cpu_phase2.lpc.html
@@ -16,6 +16,54 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >flipflop</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >con|decoder</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >con</TD>
+<TD >36</TD>
+<TD >0</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >S_and_E|decoder</TD>
 <TD >4</TD>
 <TD >0</TD>
@@ -1233,9 +1281,9 @@
 </TR>
 <TR >
 <TD >ALU</TD>
-<TD >71</TD>
+<TD >72</TD>
 <TD >0</TD>
-<TD >1</TD>
+<TD >2</TD>
 <TD >0</TD>
 <TD >64</TD>
 <TD >0</TD>
@@ -1538,13 +1586,13 @@
 <TR >
 <TD >R1</TD>
 <TD >35</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
 <TD >32</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
+<TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
