--- a/phase3/db/cpu_phase2.lpc.html
+++ b/phase3/db/cpu_phase2.lpc.html
@@ -16,6 +16,22 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >c_unit</TD>
+<TD >35</TD>
+<TD >4</TD>
+<TD >27</TD>
+<TD >4</TD>
+<TD >31</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >flipflop</TD>
 <TD >2</TD>
 <TD >0</TD>
@@ -1378,13 +1394,13 @@
 <TR >
 <TD >inputPort</TD>
 <TD >35</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1602,13 +1618,13 @@
 <TR >
 <TD >R2</TD>
 <TD >35</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1618,13 +1634,29 @@
 <TR >
 <TD >R1</TD>
 <TD >35</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >R0|zero_reg</TD>
+<TD >35</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1633,14 +1665,14 @@
 </TR>
 <TR >
 <TD >R0</TD>
-<TD >35</TD>
-<TD >32</TD>
+<TD >36</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1681,14 +1713,14 @@
 </TR>
 <TR >
 <TD >PC</TD>
-<TD >35</TD>
-<TD >32</TD>
+<TD >36</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1698,13 +1730,13 @@
 <TR >
 <TD >LO</TD>
 <TD >35</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -1714,13 +1746,13 @@
 <TR >
 <TD >HI</TD>
 <TD >35</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
-<TD >32</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
